update jester  dict

--- a/data/process_jester.ipynb
+++ b/data/process_jester.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
@@ -31,7 +31,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 8
+     "execution_count": 2
     }
    ],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "df = pd.read_csv('jester_rating_original.csv')"
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -262,10 +262,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "df.to_csv('jester_rating_sec.csv',index=False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "processing done!\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "user_dict = {}\n",
+    "for index, row in df.iterrows():\n",
+    "    # userId, movieId,rating,_,__ = val\n",
+    "    userId = int(row[\"userId\"])\n",
+    "    jokeId = int(row[\"jokeId\"])\n",
+    "    rating = row[\"rating\"]\n",
+    "\n",
+    "    if userId in user_dict:\n",
+    "        user_dict[userId].append((jokeId, rating))\n",
+    "    else:\n",
+    "        user_dict[userId] = [(jokeId, rating)]\n",
+    "np.save(\"user_dict_jester\", user_dict)\n",
+    "print(\"processing done!\")"
    ],
    "metadata": {
     "collapsed": false,
